--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,20 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+
+  <script src="https://www.gstatic.com/firebasejs/3.6.7/firebase.js"></script>
+  <script>
+    // Initialize Firebase
+    var config = {
+      apiKey: "AIzaSyAkHMbS6cYE1kN42TnAlpalfJk05NkPbFU",
+      authDomain: "level-0-17b86.firebaseapp.com",
+      databaseURL: "https://level-0-17b86.firebaseio.com",
+      storageBucket: "level-0-17b86.appspot.com",
+      messagingSenderId: "851345705881"
+    };
+    firebase.initializeApp(config);
+  </script>
 </head>
 <body>
   <app-root>Loading...</app-root>
